Final HW2 commit

--- a/portfolio.html
+++ b/portfolio.html
@@ -85,9 +85,9 @@
           <p><a href="https://karlavalentina85.github.io/firsthomework/Develop/index.html" target="_blank">HTML and CSS practice.</a></p>
         </div>
         <div class="col-md-6">
-          <img src="./Assets/Images/Stgo.jpg" class="img-fluid" alt="Bootstrap">
+          <a href="https://karlavalentina85.github.io/BootstrapHW2/" target="_blank"><img src="./Assets/Images/Stgo.jpg" class="img-fluid" alt="Bootstrap"></a>
           <h3>Bootstrap - Week 2</h3>
-          <p>Used Bootstrap 4 to create responsive website.</p>
+          <p><a href="https://karlavalentina85.github.io/BootstrapHW2/" target="_blank">Used Bootstrap 4 to create responsive website.</a></p>
         </div>
       </div>
       <div class="row">
