--- a/contact.html
+++ b/contact.html
@@ -37,8 +37,8 @@
         color:silver;
       }
 
-      .big-banner {
-        background-image: url('./Assets/Images/Stgo.jpg');
+      .fa-github {
+        color:silver;
       }
 
  </style> 
@@ -138,7 +138,7 @@
         <div class="row">
           <div class="col-md-6">
             <a  target="_blank" href="https://www.linkedin.com/in/karla-silva-b170b31a8/" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
-          
+            <a  target="_blank" href="https://www.github.com/karlavalentina85" class="btn-social btn-outline"><i class="fa fa-fw fa-github"></i></a>
             <a  target="_blank" href="https://www.instagram.com/kokakonkuky" class="btn-social btn-outline"><i class="fa fa-fw fa-instagram"></i></a>
           </div>
         </div>
