--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       }
 
       body {
-        background-image: url(./Assets/Images/Stgo.JPG);
+        background-image: url("Assets/Images/Stgo.jpg");
         font-family: 'PT Serif', serif;
         font-family: 'Roboto Slab', serif;
       }
@@ -90,7 +90,7 @@
 
   <div class="row">
     <div class="col-md-3">
-      <img src="./Assets/Images/portfolio.JPG" class="img-thumbnail" alt="Responsive image">
+      <img src="Assets/Images/portfolio.JPG" class="img-thumbnail" alt="Responsive image">
     </div>
     <div class="col-md-9">
         <p>
