fixing bug with images

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
   <div class="row">
     <div class="col-md-3">
-      <img src="Assets/Images/portfolio.JPG" class="img-thumbnail" alt="Responsive image">
+      <img src="Assets/Images/portfolio.jpg" class="img-thumbnail" alt="Responsive image">
     </div>
     <div class="col-md-9">
         <p>
