--- a/portfolio.html
+++ b/portfolio.html
@@ -25,7 +25,7 @@
       .navbar-toggler-icon {
         background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(211,211,211, 0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
       }
-      
+
       body {
         font-family: 'PT Serif', serif;
         font-family: 'Roboto Slab', serif;
@@ -85,12 +85,12 @@
     
       <div class="row">
         <div class="col-md-6">
-        <a href="https://karlavalentina85.github.io/ER-Finder/"  target="_blank"><img src="./Assets/Images/erimage.jpg" class="img-fluid" alt="ER-Finder"></a>
+        <a href="https://karlavalentina85.github.io/ER-Finder/"  target="_blank"><img src="Assets/Images/erimage.jpg" class="img-fluid" alt="ER-Finder"></a>
           <h3>Project I</h3>
           <p><a href="ttps://karlavalentina85.github.io/ER-Finder/" target="_blank">First Project called "ER Finder" An application that helps the user to locate the nearest Emergency Rooms in their radar.</a></p>
         </div>
         <div class="col-md-6">
-          <a href="https://karlavalentina85.github.io/Weather-Dashboard/" target="_blank"><img src="./Assets/Images/weather.jpg" class="img-fluid" alt="Weather-Dashboard"></a>
+          <a href="https://karlavalentina85.github.io/Weather-Dashboard/" target="_blank"><img src="Assets/Images/weather.jpg" class="img-fluid" alt="Weather-Dashboard"></a>
           <h3>Weather-Dashboard</h3>
           <p><a href="https://karlavalentina85.github.io/Weather-Dashboard/" target="_blank">Application that displays current and forecasts weather for every City in the U.S.</a></p>
         </div>
@@ -102,7 +102,7 @@
           <p><a href="https://karlavalentina85.github.io/CODEQUIZ/" target="_blank">A quiz to test your Javascript knowledge</a></p>
         </div>
         <div class="col-md-6">
-          <a href="https://scratch.mit.edu/projects/388783163" target="_blank"><img src="./Assets/Images/game.png" class="img-fluid" alt="game"></a>
+          <a href="https://scratch.mit.edu/projects/388783163" target="_blank"><img src="Assets/Images/game.png" class="img-fluid" alt="game"></a>
           <h3>My first game</h3>
           <p><a href="https://scratch.mit.edu/projects/388783163" target="_blank">Using Scratch, I created my first game</a></p>
         </div>
