--- a/portfolio.html
+++ b/portfolio.html
@@ -29,6 +29,12 @@
       body {
         font-family: 'PT Serif', serif;
         font-family: 'Roboto Slab', serif;
+        background-image: url("Assets/Images/Stgo.jpg");
+      }
+      section{
+        margin-top: 5rem;
+        padding-left: 2rem;
+        padding-right: 2rem;
       }
       .footer-style {
         background-color:steelblue;
@@ -53,7 +59,7 @@
 
 
     <nav class="navbar navbar-expand-lg sticky-top">
-      <span class="navbar-brand mb-1 h1">Karla Silva</span>
+      <span class="navbar-brand mb-1 h1">Karla Silva Rodríguez</span>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -74,40 +80,45 @@
         </ul>
       </div>
     </nav>
-
     <section>
-    <div class="container p-3 my-3">
-      <div class="row">
-        <div class="col-md-12">
-           <h1>Portfolio</h1>
+      <div class="row row-cols-1 row-cols-md-2">
+        <div class="col mb-4">
+          <div class="card">
+            <a href="https://karlavalentina85.github.io/ER-Finder/"  target="_blank"><img src="" class="img-fluid" alt="ER-Finder"></a>
+            <div class="card-body">
+              <h5 class="card-title">Project I</h5>
+              <p class="card-text">First Project called "ER Finder". An application that helps the user to locate the nearest Emergency Rooms in their radar.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col mb-4">
+          <div class="card">
+            <a href="https://karlavalentina85.github.io/Weather-Dashboard/" target="_blank"><img src="" class="img-fluid" alt="Weather-Dashboard"></a>
+            <div class="card-body">
+              <h5 class="card-title">Weather-Dashboard</h5>
+              <p class="card-text">Application that displays current and forecasts weather for every City in the U.S.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col mb-4">
+          <div class="card">
+            <a href="https://karlavalentina85.github.io/CODEQUIZ/"target="_blank"><img src="" class="img-fluid" alt="CODEQUIZ">
+            <div class="card-body">
+              <h5 class="card-title">JS Code Quiz</h5>
+              <p class="card-text">A quiz to test your Javascript knowledge</p>
+            </div>
+          </div>
+        </div>
+        <div class="col mb-4">
+          <div class="card">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title"></h5>
+              <p class="card-text">This is ..</p>
+           </div>
+          </div>
         </div>
       </div>
-    
-      <div class="row">
-        <div class="col-md-6">
-        <a href="https://karlavalentina85.github.io/ER-Finder/"  target="_blank"><img src="Assets/Images/erimage.jpg" class="img-fluid" alt="ER-Finder"></a>
-          <h3>Project I</h3>
-          <p><a href="ttps://karlavalentina85.github.io/ER-Finder/" target="_blank">First Project called "ER Finder" An application that helps the user to locate the nearest Emergency Rooms in their radar.</a></p>
-        </div>
-        <div class="col-md-6">
-          <a href="https://karlavalentina85.github.io/Weather-Dashboard/" target="_blank"><img src="Assets/Images/weather.jpg" class="img-fluid" alt="Weather-Dashboard"></a>
-          <h3>Weather-Dashboard</h3>
-          <p><a href="https://karlavalentina85.github.io/Weather-Dashboard/" target="_blank">Application that displays current and forecasts weather for every City in the U.S.</a></p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-6">
-          <a href="https://karlavalentina85.github.io/CODEQUIZ/"target="_blank"><img src="https://mdbootstrap.com/img/Photos/Lightbox/Thumbnail/img%20(145).jpg" class="img-fluid" alt="CODEQUIZ">
-          <h3> JS Code Quiz</h3>
-          <p><a href="https://karlavalentina85.github.io/CODEQUIZ/" target="_blank">A quiz to test your Javascript knowledge</a></p>
-        </div>
-        <div class="col-md-6">
-          <a href="https://scratch.mit.edu/projects/388783163" target="_blank"><img src="Assets/Images/game.png" class="img-fluid" alt="game"></a>
-          <h3>My first game</h3>
-          <p><a href="https://scratch.mit.edu/projects/388783163" target="_blank">Using Scratch, I created my first game</a></p>
-        </div>
-      </div>
-    </div>
   </section>
     <footer class="container-fluid footer-style fixed-bottom">
       <div class="container">
