--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         background-image: url("Assets/Images/Stgo.jpg");
         font-family: 'PT Serif', serif;
         font-family: 'Roboto Slab', serif;
+        color: silver;
       }
 
       .footer-style {
@@ -81,7 +82,7 @@
 
 
     <section>
-    <div class="container p-3 my-3 text-white">
+    <div class="container p-3 my-3">
       <div class="row">
         <div class="col-md-12">
           <h1>About Me</h1>
@@ -109,7 +110,7 @@
     <div class="container">
       <div class="row">
           <div class="col-md-6">
-            <a  target="_blank" href="https://www.linkedin.com/in/karla-silva-b170b31a8/" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
+            <a  target="_blank" href="https://www.linkedin.com/in/karla-silva-rodr%C3%ADguez-b170b31a8/" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
             <a  target="_blank" href="https://www.github.com/karlavalentina85" class="btn-social btn-outline"><i class="fa fa-fw fa-github"></i></a>
             <a  target="_blank" href="https://www.instagram.com/kokakonkuky" class="btn-social btn-outline"><i class="fa fa-fw fa-instagram"></i></a>
           </div>
