--- a/portfolio.html
+++ b/portfolio.html
@@ -124,7 +124,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-6">
-            <a  target="_blank" href="https://www.linkedin.com/in/karla-silva-b170b31a8/" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
+            <a  target="_blank" href="https://www.linkedin.com/in/karla-silva-rodr%C3%ADguez-b170b31a8/" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
             <a  target="_blank" href="https://www.github.com/karlavalentina85" class="btn-social btn-outline"><i class="fa fa-fw fa-github"></i></a>
             <a  target="_blank" href="https://www.instagram.com/kokakonkuky" class="btn-social btn-outline"><i class="fa fa-fw fa-instagram"></i></a>
           </div>
