--- a/index.html
+++ b/index.html
@@ -9,51 +9,11 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <style>
-  
-      .navbar {
-        background-color: steelblue;
-        color: silver;
-        font-family: 'PT Serif', serif;
-        font-family: 'Roboto Slab', serif;
-      }
-  
-      .nav-link {
-        color:silver;
-      }
-
-      .navbar-toggler-icon {
-        background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(211,211,211, 0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
-      }
-
-      body {
-        background-image: url("Assets/Images/Stgo.jpg");
-        font-family: 'PT Serif', serif;
-        font-family: 'Roboto Slab', serif;
-        color: silver;
-      }
-
-      .footer-style {
-        background-color:steelblue;
-      }
-
-      .fa-linkedin {
-        color: silver;
-      }
-
-      .fa-instagram {
-        color:silver;
-      } 
-
-      .fa-github {
-        color:silver;
-      }
-
-  </style> 
+    <link rel="stylesheet" href="Assets/style.css">
 
     <title>About Me</title>
   </head>
-  <body>
+  <body style="background-image: url('Assets/Images/Stgo.jpg')">
 
 
     <nav class="navbar navbar-expand-lg sticky-top">
@@ -97,10 +57,9 @@
         <p>
         
         Recently moved to Nashville with my family. I was born in Santiago, Chile, but my roots come from 
-        the South of my country, Valdivia. I grew up as gymnast, but I was always interested in languages, had French
-        and English in School and always liked it, therefore, I ended up studying English-Spanish
-        Translation, then some Portuguese, so why not trying to code? So, I'm currently in the Vanderbilt University Coding Bootcamp 
-        to become a Full-Stack Web Developer. This is my portfolio, and you can find some of the work I've been doing lately.
+        the South of my country, Valdivia. Living a new adventure, and since I love creating things, I am currently a student in Vanderbilt University to become
+        a Full-Stack Web Developer.
+
         </p>
     </div>
   </div>
@@ -113,6 +72,9 @@
             <a  target="_blank" href="https://www.linkedin.com/in/karla-silva-rodr%C3%ADguez-b170b31a8/" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
             <a  target="_blank" href="https://www.github.com/karlavalentina85" class="btn-social btn-outline"><i class="fa fa-fw fa-github"></i></a>
             <a  target="_blank" href="https://www.instagram.com/kokakonkuky" class="btn-social btn-outline"><i class="fa fa-fw fa-instagram"></i></a>
+          </div>
+          <div class="col-md-6">
+            <span class="font-italic"> ©2020 Karla Silva R. </span>
           </div>
       </div>
   </div>
