--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
             <a class="nav-link" href="portfolio.html">Portfolio</a>
           </li>
           <li class="nav-item p-2">
+            <a class="nav-link" href="Assets/ Resume.pdf">My Resume</a>
+          </li>
+          <li class="nav-item p-2">
             <a class="nav-link" href="contact.html">Contact</a>
           </li>
         </ul>
