adding github button

--- a/portfolio.html
+++ b/portfolio.html
@@ -59,6 +59,9 @@
                     </span></center>
                   <p class="card-text">First Project called "ER Finder". An application that helps the user to locate the nearest Emergency Rooms in their radar.</p>
                   <a href="https://karlavalentina85.github.io/ER-Finder/"class="btn btn-primary">Check it out</a>
+                  <br>
+                  <br>
+                  <button><a href="https://github.com/karlavalentina85/ER-Finder" class="btn btn-secondary>">Git-Hub</a></button>
                 </div>
               </div>
             </div>
@@ -71,6 +74,9 @@
                     </span></center>
                   <p class="card-text">Application that displays current and forecasts weather for every City in the U.S.</p>
                   <a href="https://karlavalentina85.github.io/Weather-Dashboard/" class="btn btn-primary">Check it out</a>
+                  <br>
+                  <br>
+                  <button><a href="https://github.com/karlavalentina85/Weather-Dashboard" class="btn btn-secondary>">Git-Hub</a></button>
                 </div> 
               </div>
             </div>
@@ -81,6 +87,9 @@
                     <center><span class="material-icons">vpn_key</span></center>
                     <p class="card-text"> This Web Application generates a random password based on user-selected criteria. </p>
                     <a href="https://karlavalentina85.github.io/PasswordGenerator/" class="btn btn-primary">Check it out</a>
+                    <br>
+                  <br>
+                  <button><a href="https://github.com/karlavalentina85/PasswordGenerator" class="btn btn-secondary>">Git-Hub</a></button>
                   </div>
                 </div>
               </div>
