--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!--Google Fonts-->
-    <link href="https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@1,700&family=Roboto+Slab:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@1,700&display=swap" rel="stylesheet">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">    
@@ -45,8 +45,8 @@
         Contact Me
       </div>
       <div class="card-body">
-        <h5 class="card-title">E-mail: ksilva.rod@gmail.com</h5>
-        <p class="card-text">Phone Number: 615-203-9816</p>
+        <h5 class="card-title h3">E-mail: ksilva.rod@gmail.com</h5>
+        <p class="card-text h4">Phone Number: 615-203-9816</p>
         <a href="mailto:ksilva.rod@gmail.com" class="btn btn-primary btn-lg" type="submit">E-mail me!</a>
       </div>
     </div>
@@ -61,9 +61,6 @@
             <a  target="_blank" href="https://www.linkedin.com/in/karla-silva-rodr%C3%ADguez-b170b31a8/" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
             <a  target="_blank" href="https://www.github.com/karlavalentina85" class="btn-social btn-outline"><i class="fa fa-fw fa-github"></i></a>
             <a  target="_blank" href="https://www.instagram.com/kokakonkuky" class="btn-social btn-outline"><i class="fa fa-fw fa-instagram"></i></a>
-          </div>
-          <div class="col-md-6">
-            <span class="font-italic"> ©2020 Karla Silva R. </span>
           </div> 
         </div>
       </div>
