--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--Google Fonts-->
-    <link href="https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@1,700&family=Roboto+Slab:wght@700&display=swap" rel="stylesheet">
-    <!-- Bootstrap CSS -->
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@1,700&display=swap" rel="stylesheet">
+     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="Assets/style.css">
@@ -47,21 +47,23 @@
     <section>
     <div class="container p-3 my-3">
       <div class="row">
-        <div class="col-md-12">
+        <div class="col-md-12 text-center">
           <h1>About Me</h1>
         </div>
       </div>
-
+  <br>
+  <br>   
   <div class="row">
     <div class="col-md-3">
       <img src="Assets/Images/portfolio.jpg" class="img-thumbnail" alt="Responsive image">
     </div>
-    <div class="col-md-9">
+    <div class="col-md-9 h5">
         <p>
         
-        Recently moved to Nashville with my family. I was born in Santiago, Chile, but my roots come from 
-        the South of my country, Valdivia. Living a new adventure, and since I love creating things, I am currently a student in Vanderbilt University to become
-        a Full-Stack Web Developer.
+        Hola! Welcome to my Website, My name is Karla and I'm from Santiago de Chile. I recently
+        moved to Nashville, Tennessee with my family. I call it an adventure! I love literature, languages and writing,
+        and all of these has taken me to the place where I can explore another world of creativity: CODING.
+        I am on my way to become a Full-Stack Web Developer.
 
         </p>
     </div>
@@ -71,13 +73,10 @@
 <footer class="container-fluid footer-style fixed-bottom">
     <div class="container">
       <div class="row">
-          <div class="col-md-6">
+          <div class="col-md-12">
             <a  target="_blank" href="https://www.linkedin.com/in/karla-silva-rodr%C3%ADguez-b170b31a8/" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
             <a  target="_blank" href="https://www.github.com/karlavalentina85" class="btn-social btn-outline"><i class="fa fa-fw fa-github"></i></a>
             <a  target="_blank" href="https://www.instagram.com/kokakonkuky" class="btn-social btn-outline"><i class="fa fa-fw fa-instagram"></i></a>
-          </div>
-          <div class="col-md-6">
-            <span class="font-italic"> ©2020 Karla Silva R. </span>
           </div>
       </div>
   </div>
