--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!--Google Fonts-->
-    <link href="https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@1,700&family=Roboto+Slab:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@1,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
     <!-- Bootstrap CSS -->
@@ -112,9 +112,6 @@
             <a  target="_blank" href="https://www.linkedin.com/in/karla-silva-rodr%C3%ADguez-b170b31a8/" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
             <a  target="_blank" href="https://www.github.com/karlavalentina85" class="btn-social btn-outline"><i class="fa fa-fw fa-github"></i></a>
             <a  target="_blank" href="https://www.instagram.com/kokakonkuky" class="btn-social btn-outline"><i class="fa fa-fw fa-instagram"></i></a>
-          </div>
-          <div class="col-md-6">
-            <span class="font-italic"> ©2020 Karla Silva R. </span>
           </div> 
         </div>
       </div>
