--- a/portfolio.html
+++ b/portfolio.html
@@ -30,7 +30,7 @@
 
         <ul class="navbar-nav flex-row ml-md-auto d-md-flex justify-content-center">
           <li class="nav-item p-2">
-            <a class="nav-link" href="index.html">About</a>
+            <a class="nav-link" href="index.html">About Me</a>
           </li>
           <li class="nav-item p-2">
             <a class="nav-link" href="portfolio.html">Portfolio</a>
