--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
         <ul class="navbar-nav flex-row ml-md-auto d-md-flex justify-content-center">
           <li class="nav-item p-2">
-            <a class="nav-link" href="index.html">About</a>
+            <a class="nav-link" href="index.html">About Me</a>
           </li>
           <li class="nav-item p-2">
             <a class="nav-link" href="portfolio.html">Portfolio</a>
@@ -45,31 +45,22 @@
 
 
     <section>
-    <div class="container p-3 my-3">
-      <div class="row">
-        <div class="col-md-12 text-center">
-          <h1>About Me</h1>
+      <div class="card mb-3" id="aboutme" style="max-width: 540px;">
+        <div class="row no-gutters">
+          <div class="col-md-4">
+            <img src="Assets/Images/portfolio.jpg" class="img-thumbnail" alt="Responsive Image">
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <p class="card-text">Hola! Welcome to my Website, My name is Karla and I'm from Santiago de Chile. I recently
+                moved to Nashville, Tennessee with my family. I call it an adventure! I love literature, languages and writing,
+                and all of these has taken me to the place where I can explore another world of creativity: CODING.
+                I am on my way to become a Full-Stack Web Developer.</p>
+            </div>
+          </div>
         </div>
       </div>
-  <br>
-  <br>   
-  <div class="row">
-    <div class="col-md-3">
-      <img src="Assets/Images/portfolio.jpg" class="img-thumbnail" alt="Responsive image">
-    </div>
-    <div class="col-md-9 h5">
-        <p>
-        
-        Hola! Welcome to my Website, My name is Karla and I'm from Santiago de Chile. I recently
-        moved to Nashville, Tennessee with my family. I call it an adventure! I love literature, languages and writing,
-        and all of these has taken me to the place where I can explore another world of creativity: CODING.
-        I am on my way to become a Full-Stack Web Developer.
-
-        </p>
-    </div>
-  </div>
-</div>
-</section>
+  </section>
 <footer class="container-fluid footer-style fixed-bottom">
     <div class="container">
       <div class="row">
