added container to about me part

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 
 
     <section>
+      <div class="container">
       <div class="card mb-3" id="aboutme" style="max-width: 540px;">
         <div class="row no-gutters">
           <div class="col-md-4">
@@ -60,6 +61,7 @@
           </div>
         </div>
       </div>
+    </div>
   </section>
 <footer class="container-fluid footer-style fixed-bottom">
     <div class="container">
