--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <section>
       <div class="container">
       <div class="card mb-3" id="aboutme">
-        <div class="row no-gutters">
+        <div class="row">
           <div class="col-md-4">
             <img src="Assets/Images/portfolio.jpg" class="img-thumbnail" alt="Responsive Image">
           </div>
