--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
     <section>
       <div class="container">
       <div class="card mb-3" id="aboutme">
-        <div class="row">
+        <div class="row no-gutters">
           <div class="col-md-4">
-            <img src="Assets/Images/portfolio.jpg" class="img-thumbnail" alt="Responsive Image">
+            <img src="Assets/Images/portfolio.jpg" class="img-fluid" alt="Responsive Image">
           </div>
           <div class="col-md-8">
             <div class="card-body">
