final adjustments to index.html page

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     <section>
       <div class="container">
-      <div class="card mb-3" id="aboutme">
+      <div class="card" id="aboutme">
         <div class="row no-gutters">
           <div class="col-md-4">
             <img src="Assets/Images/portfolio.jpg" class="img-fluid" alt="Responsive Image">
