--- a/portfolio.html
+++ b/portfolio.html
@@ -96,9 +96,9 @@
               <div class="col-sm-3">
                 <div class="card">
                   <div class="card-body bg-light">
-                    <h5 class="card-title text-secondary">Coming soon</h5>
-                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <h5 class="card-title text-secondary">Eat Da-Burger!</h5>
+                    <p class="card-text">a restaurant app that lets users input the names of burgers they'd like to eat, following the MVC design pattern, Node, Express, and Handlebars.</p>
+                    <a href="https://github.com/karlavalentina85/burger" class="btn btn-primary">Check it out</a>
                   </div> 
                 </div>
               </div>  
