--- a/portfolio.html
+++ b/portfolio.html
@@ -98,7 +98,10 @@
                   <div class="card-body bg-light">
                     <h5 class="card-title text-secondary">Eat Da-Burger!</h5>
                     <p class="card-text">a restaurant app that lets users input the names of burgers they'd like to eat, following the MVC design pattern, Node, Express, and Handlebars.</p>
-                    <a href="https://github.com/karlavalentina85/burger" class="btn btn-primary">Check it out</a>
+                    <a href="https://sleepy-sands-33989.herokuapp.com/" class="btn btn-primary">Check it out</a>
+                    <br>
+                    <br>
+                    <button><a href="https://github.com/karlavalentina85/burger" class="btn btn-secondary>">Git-Hub</a></button>
                   </div> 
                 </div>
               </div>  
