--- a/portfolio.html
+++ b/portfolio.html
@@ -68,15 +68,15 @@
             <div class="col-sm-3">
               <div class="card">
                 <div class="card-body bg-light">
-                  <h5 class="card-title text-secondary text-center">Weather-Dashboard</h5>
+                  <h5 class="card-title text-secondary text-center">Project II</h5>
                 <center><span class="material-icons">
                     wb_cloudy
                     </span></center>
-                  <p class="card-text">Application that displays current and forecasts weather for every City in the U.S.</p>
-                  <a href="https://karlavalentina85.github.io/Weather-Dashboard/" class="btn btn-primary">Check it out</a>
+                  <p class="card-text">Quick Quiz, this app gives random trivia questions, tracks scores and adds it to a team.</p>
+                  <a href="https://serene-inlet-83004.herokuapp.com/" class="btn btn-primary">Check it out</a>
                   <br>
                   <br>
-                  <button><a href="https://github.com/karlavalentina85/Weather-Dashboard" class="btn btn-secondary>">Git-Hub</a></button>
+                  <button><a href="https://github.com/proflonghair07/Project_2" class="btn btn-secondary>">Git-Hub</a></button>
                 </div> 
               </div>
             </div>
