--- a/portfolio.html
+++ b/portfolio.html
@@ -70,8 +70,8 @@
                 <div class="card-body bg-light">
                   <h5 class="card-title text-secondary text-center">Project II</h5>
                 <center><span class="material-icons">
-                    wb_cloudy
-                    </span></center>
+                  hourglass_full
+                  </span></center>
                   <p class="card-text">Quick Quiz, this app gives random trivia questions, tracks scores and adds it to a team.</p>
                   <a href="https://serene-inlet-83004.herokuapp.com/" class="btn btn-primary">Check it out</a>
                   <br>
