adding extra hw ex

--- a/portfolio.html
+++ b/portfolio.html
@@ -97,14 +97,49 @@
                 <div class="card">
                   <div class="card-body bg-light">
                     <h5 class="card-title text-secondary">Eat Da-Burger!</h5>
+                    <center><span class="material-icons">
+                      fastfood
+                      </span></center>
                     <p class="card-text">a restaurant app that lets users input the names of burgers they'd like to eat, following the MVC design pattern, Node, Express, and Handlebars.</p>
                     <a href="https://sleepy-sands-33989.herokuapp.com/" class="btn btn-primary">Check it out</a>
                     <br>
                     <br>
                     <button><a href="https://github.com/karlavalentina85/burger" class="btn btn-secondary>">Git-Hub</a></button>
                   </div> 
+                </div>     
+              </div>
+              <div class="col-sm-3">
+                <div class="card">
+                  <div class="card-body bg-light">
+                    <h5 class="card-title text-secondary">Employee Tracker</h5>
+                    <center><span class="material-icons">
+                      work
+                      </span></center>
+                    <p class="card-text">Content Manager System Interface, builds a solution for managing a company's employees, using node, inquirer and MySQL.</p>
+                    <a href="https://drive.google.com/file/d/15p6rooYr6Xe20WfVRHUl5lTJQB8Px_l_/view" class="btn btn-primary">Check out the Demo!</a>
+                    <br>
+                    <br>
+                    <button><a href="https://github.com/karlavalentina85/Employee-Tracker" class="btn btn-secondary>">Git-Hub</a></button>
+                  </div> 
                 </div>
               </div>  
+              <div class="col-sm-3">
+                <div class="card">
+                  <div class="card-body bg-light">
+                    <h5 class="card-title text-secondary text-center">ReadMe Generator</h5>
+                  <center><span class="material-icons">
+                    speaker_notes
+                    </span></center>
+                    <p class="card-text">A command-line application that dynamically generates a professional README.md from a user's input using the Inquirer package.
+
+                    </p>
+                    <a href=" https://drive.google.com/file/d/1pPMz0qJwbEtk7_my7bWKoHtWYkSDATrO/view" class="btn btn-primary">Check out the Demo!</a>
+                    <br>
+                    <br>
+                    <button><a href="https://github.com/karlavalentina85/README-Generator" class="btn btn-secondary>">Git-Hub</a></button>
+                  </div> 
+                </div>
+              </div>    
           </div>
         </div>
   </section>
